src/test/compile-fail/issue-897-2.rs
// error-pattern: In non-returning function f, some control paths may return
fn g() -> ! { fail; }
fn f() -> ! { ret 42; g(); }
fn main() { }
